@@ -721,7 +721,6 @@ pvm_val_reloc (pvm_val val, pvm_val ios, pvm_val boffset)
             = boff + (PVM_VAL_ULONG (PVM_VAL_SCT_FIELD_OFFSET (val, i))
                       - struct_offset);
 
-
           /* Do not relocate absent fields.  */
           if (PVM_VAL_SCT_FIELD_ABSENT_P (val, i))
             continue;
@@ -736,7 +735,7 @@ pvm_val_reloc (pvm_val val, pvm_val ios, pvm_val boffset)
             pvm_make_int (1, 32);
 
           pvm_val_reloc (field_value, ios,
-                         pvm_make_ulong (boff + field_offset, 64));
+                         pvm_make_ulong (field_new_offset, 64));
         }
 
       PVM_VAL_SCT_MAPPED_P_BACK (val) = PVM_VAL_SCT_MAPPED_P (val);
