@@ -114,6 +114,9 @@ EXTRA_DIST = \
   poke.map/ass-map-6.pk \
   poke.map/ass-map-7.pk \
   poke.map/ass-map-8.pk \
+  poke.map/ass-map-9.pk \
+  poke.map/ass-map-10.pk \
+  poke.map/ass-map-11.pk \
   poke.map/map-opcond-write-1.pk \
   poke.map/map-optcond-1.pk \
   poke.map/map-optcond-2.pk \
